--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CS401Collaboration">
         <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".ItemViewActivity"
             android:exported="false" />
         <activity
             android:name=".CollectionViewActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".HomeScreenActivity"
             android:exported="true">
