Add visual clarity to AddCollectionActivity Rename files for consistency: NewCollectionActivity -> NewHomeCollectionActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CS401Collaboration">
         <activity
-            android:name=".NewCollectionActivity"
+            android:name=".NewHomeCollectionActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
