--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cs401collaboration">
 
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.CAMERA" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +27,12 @@
             android:exported="false" />
         <activity
             android:name=".CollectionViewActivity"
+            android:exported="true" />
+        <activity
+            android:name=".QRViewActivity"
+            android:exported="true" />
+        <activity
+            android:name=".QRScanActivity"
             android:exported="true" />
         <activity
             android:name=".HomeScreenActivity"
